Fixed always visible scrollbar in code blocks

--- a/src/_assets/styles/base.pcss
+++ b/src/_assets/styles/base.pcss
@@ -132,7 +132,7 @@ pre[class*='language-'] {
   padding: 0; /* Move padding to the code block for nicer scroll bars */
 }
 code[class*='language-'] {
-  overflow-x: scroll; /* This makes the code block scroll when needed */
+  overflow-x: auto; /* This makes the code block scroll when needed */
   display: block; /* Required to make the code scrollable */
   padding: 1em; /* Move padding to the code block for nicer scroll bars */
 }
